some fixes and improvements for readability; linked the settings to the simulation

--- a/src/index.css
+++ b/src/index.css
@@ -51,13 +51,6 @@ body {
     max-height: 250px;
 }
 
-.transition {
-    width: 150px;
-    transform: skewX(-5deg) translateX(30px);
-    transition: 1s all ease-in-out;
-    -webkit-transition: 1s all ease-in-out;
-}
-
 .cta {
     font-size: 26px;
     text-transform: uppercase;
@@ -158,19 +151,13 @@ body {
         width: 100%;
         padding-top: 0;
         padding-left: 25px;
+        min-height: 60px;
     }
 
     .cta {
         line-height: 60px;
         transform: rotate(0);
         margin: 0;
-    }
-
-    .transition {
-        min-height: 60px;
-        transform: skewX(0deg) translateX(0);
-        transition: 1s all ease-in-out;
-        -webkit-transition: 1s all ease-in-out;
     }
 }
 
